Starting on Front-End CRUD Functionalities, Amen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,8 @@ flutter:
     - images/Boogle (1).png
     - images/ruchindra-gunasekara-GK8x_XCcDZg-unsplash.jpg
     - images/Boogle-logos.jpeg
-
+    - lotties/8408-app-background.json
+    - lotties/74644-add-to-basket.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
