--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  intl: ^0.17.0
+  #intl: ^0.17.0 (not needed since I have no usage of DateTime data types yet for part 2, part 3 may need it for Review Feature.)
   provider: ^6.0.2
   animated_splash_screen: ^1.2.0
   lottie: ^1.3.0
   carousel_slider: ^4.1.1
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +75,7 @@ flutter:
     - images/Boogle (1).png
     - images/ruchindra-gunasekara-GK8x_XCcDZg-unsplash.jpg
     - images/Boogle-logos.jpeg
+    - images/pngfind.com-cart-png-2727925.png
     - lotties/8408-app-background.json
     - lotties/74644-add-to-basket.json
   #   - images/a_dot_burr.jpeg
