--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   lottie: ^1.3.0
   carousel_slider: ^4.1.1
   flutter_rating_bar: ^4.0.1
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
