--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   carousel_slider: ^4.1.1
   flutter_rating_bar: ^4.0.1
   fluttertoast: ^8.0.9
+  country_code_picker: ^2.0.2
 
 dev_dependencies:
   flutter_test:
