--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,15 @@ dependencies:
   cupertino_icons: ^1.0.2
   #intl: ^0.17.0 (not needed since I have no usage of DateTime data types yet for part 2, part 3 may need it for Review Feature.)
   provider: ^6.0.2
+  shared_preferences: ^2.0.15
   animated_splash_screen: ^1.2.0
   lottie: ^1.3.0
   carousel_slider: ^4.1.1
   flutter_rating_bar: ^4.0.1
   fluttertoast: ^8.0.9
   country_code_picker: ^2.0.2
+  flutter_staggered_animations: "^1.0.0"
+  page_transition: "^2.0.9"
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +81,8 @@ flutter:
     - images/ruchindra-gunasekara-GK8x_XCcDZg-unsplash.jpg
     - images/Boogle-logos.jpeg
     - images/pngfind.com-cart-png-2727925.png
+    - images/mastercard.png
+    - images/visa.png
     - lotties/8408-app-background.json
     - lotties/74644-add-to-basket.json
   #   - images/a_dot_burr.jpeg
