--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -21,9 +21,20 @@ linter:
   # or a specific dart file by using the `// ignore: name_of_lint` and
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
+  # Additional information about this file can be found at
+  ## https://dart.dev/guides/language/analysis-options
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
-
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+    avoid_print: true
+    prefer_single_quotes: true
+    always_use_package_imports: true
+    avoid_relative_lib_imports: true
+    avoid_dynamic_calls: true
+    comment_references: true
+    list_remove_unrelated_type: true
+    no_adjacent_strings_in_list: true
+    prefer_void_to_null: true
+    use_key_in_widget_constructors: true
+    valid_regexps: true #helps prevents FormatException in TextFormFields
+    always_put_control_body_on_new_line: true
+    always_put_required_named_parameters_first: true
+    avoid_as: true
