--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   #intl: ^0.17.0 (not needed since I have no usage of DateTime data types yet for part 2, part 3 may need it for Review Feature.)
   provider: ^6.0.2
   shared_preferences: ^2.0.15
+  google_fonts: ^3.0.1
   animated_splash_screen: ^1.2.0
   lottie: ^1.3.0
   carousel_slider: ^4.1.1
@@ -45,8 +46,16 @@ dependencies:
   country_code_picker: ^2.0.2
   flutter_staggered_animations: "^1.0.0"
   page_transition: "^2.0.9"
+  readmore: ^2.1.0
+  url_launcher: ^6.1.4
+  font_awesome_flutter: ^10.1.0
+  regexpattern: ^2.0.1
+
 
 dev_dependencies:
+
+  flutter_lints: ^1.0.0
+
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: "^0.9.2"
@@ -54,14 +63,13 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "images/Boogle-logos.jpeg"
+  image_path: "images/Boogle-logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -79,12 +87,20 @@ flutter:
     #- add static images here
     - images/Boogle (1).png
     - images/ruchindra-gunasekara-GK8x_XCcDZg-unsplash.jpg
-    - images/Boogle-logos.jpeg
+    - images/Boogle-logo.png
+    - images/153-1533013_sorry-no-results-found.png
     - images/pngfind.com-cart-png-2727925.png
     - images/mastercard.png
     - images/visa.png
+    - images/sheesh_bois.png
+    - images/BenzCarousel1.png
+    - images/76258-Banner---Home-3.jpg
+    - images/Mercedes_Benz-Logo-PNG6.png
+    - images/me-bean.gif
+    - images/Mobile_SuperTM.png
     - lotties/8408-app-background.json
     - lotties/74644-add-to-basket.json
+    - lotties/13892-earth-and-connections.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
