--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  #intl: ^0.17.0 (not needed since I have no usage of DateTime data types yet for part 2, part 3 may need it for Review Feature.)
   provider: ^6.0.2
+  intl: ^0.17.0
   shared_preferences: ^2.0.15
   google_fonts: ^3.0.1
   animated_splash_screen: ^1.2.0
@@ -44,12 +42,32 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   fluttertoast: ^8.0.9
   country_code_picker: ^2.0.2
-  flutter_staggered_animations: "^1.0.0"
-  page_transition: "^2.0.9"
+  flutter_staggered_animations: ^1.0.0
+  page_transition: ^2.0.9
   readmore: ^2.1.0
   url_launcher: ^6.1.4
   font_awesome_flutter: ^10.1.0
   regexpattern: ^2.0.1
+  firebase_core: ^1.20.0
+  cloud_firestore: ^3.4.0
+  firebase_auth: ^3.3.10
+  flutter_launcher_icons: ^0.9.2
+  flutter_native_splash: ^2.1.2+1
+  flutter_tts: ^3.5.0
+  firebase_messaging: ^12.0.1
+  flutter_local_notifications: ^9.7.0
+flutter_icons:
+  android: true
+  ios: false
+  image_path: "images/Boogle_icon.png"
+  adaptive_icon_background: "#000000"
+  adaptive_icon_foreground: "images/Boogle_icon.png"
+
+flutter_native_splash:
+  android: true
+  ios: false
+  image: "images/Boogle_icon.png"
+  color: "#000000"
 
 
 dev_dependencies:
@@ -58,12 +76,8 @@ dev_dependencies:
 
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.9.2"
 
-flutter_icons:
-  android: true
-  ios: true
-  image_path: "images/Boogle-logo.png"
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -98,6 +112,7 @@ flutter:
     - images/Mercedes_Benz-Logo-PNG6.png
     - images/me-bean.gif
     - images/Mobile_SuperTM.png
+    - images/Boogle_icon.png
     - lotties/8408-app-background.json
     - lotties/74644-add-to-basket.json
     - lotties/13892-earth-and-connections.json
