--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,8 +54,10 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   flutter_native_splash: ^2.1.2+1
   flutter_tts: ^3.5.0
-  firebase_messaging: ^12.0.1
   flutter_local_notifications: ^9.7.0
+  qr_flutter: ^4.0.0
+  qr_code_scanner: ^0.4.0
+
 flutter_icons:
   android: true
   ios: false
