--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   flutter_local_notifications: ^9.7.0
   qr_flutter: ^4.0.0
   qr_code_scanner: ^0.4.0
+  flutter_stripe: ^4.0.0
+  http: ^0.13.5
 
 flutter_icons:
   android: true
